--- a/.envSample
+++ b/.envSample
@@ -1,3 +1,5 @@
 PRIVATE_KEY=0x00
-L1_RPC_URL=https://1rpc.io/sepolia
-L2_RPC_URL=https://ozean-testnet.rpc.caldera.xyz/http
+L1_RPC_URL=https://eth.llamarpc.com
+L2_RPC_URL=
+L1_TESTNET_RPC_URL=https://ethereum-sepolia-rpc.publicnode.com
+L2_TESTNET_RPC_URL=https://ozean-testnet.rpc.caldera.xyz/http
