--- a/.envSample
+++ b/.envSample
@@ -1,5 +1,79 @@
+## USER ##
+
 PRIVATE_KEY=0x00
-L1_RPC_URL=https://eth.llamarpc.com
-L2_RPC_URL=
+ADMIN=0x00000000
+
+## RPCS ##
+
+L1_MAINNET_RPC_URL=https://eth.llamarpc.com
+L2_MAINNET_RPC_URL=
 L1_TESTNET_RPC_URL=https://ethereum-sepolia-rpc.publicnode.com
 L2_TESTNET_RPC_URL=https://ozean-testnet.rpc.caldera.xyz/http
+
+## LGE STAKING ##
+
+L1_MAINNET_STETH=0xae7ab96520de3a18e5e111b5eaab095312d7fe84
+L1_MAINNET_WSTETH=0x7f39c581f595b53c5cb19bd0b3f8da6c935e2ca0
+# Ensure token address and deposit caps share the same index
+# and are normalised for decimals.
+# Tokens: wstETH, WBTC,
+# Caps  : 1e21  , 1e12
+L1_MAINNET_LGE_TOKENS=0x7f39c581f595b53c5cb19bd0b3f8da6c935e2ca0,0x2260fac5e5542a773aa44fbcfedf7c193bc2c599
+L1_MAINNET_LGE_CAPS=1000000000000000000000,1000000000000
+
+L1_SEPOLIA_STETH=0x3e3FE7dBc6B4C189E7128855dD526361c49b40Af
+L1_SEPOLIA_WSTETH=0xB82381A3fBD3FaFA77B3a7bE693342618240067b
+# Tokens: USDC, USDT,  DAI, WSTETH
+# Caps  : 1e12, 1e12, 1e24,   1e24
+L1_SEPOLIA_LGE_TOKENS=0x94a9D9AC8a22534E3FaCa9F4e7F2E2cf85d5E4C8,0xaA8E23Fb1079EA71e0a56F48a2aA51851D8433D0,0xFF34B3d4Aee8ddCd6F9AFFFB6Fe49bD371b8a357,0xB82381A3fBD3FaFA77B3a7bE693342618240067b
+L1_SEPOLIA_LGE_CAPS=1000000000000,1000000000000,1000000000000000000000000,1000000000000000000000000
+
+## LGE MIGRATION ##
+
+L1_MAINNET_STANDARD_BRIDGE=
+L1_MAINNET_LIDO_BRIDGE=
+L1_MAINNET_USDX_BRIDGE=
+L1_MAINNET_LGE_STAKING=
+L1_MAINNET_USDC=
+### wstETH above
+L1_MAINNET_ADDRESSES=
+L2_MAINNET_ADDRESSES=
+L2_MAINNET_RESTRICTED_ADDRESSES=
+
+L1_SEPOLIA_STANDARD_BRIDGE=0xb9558CE3C11EC69e18632A8e5B316581e852dB91
+L1_SEPOLIA_LIDO_BRIDGE=0xd836932faEaC34FdFF0bb14696E92bA33805D4E3
+L1_SEPOLIA_USDX_BRIDGE=
+L1_SEPOLIA_LGE_STAKING=
+L1_SEPOLIA_USDC=0x94a9D9AC8a22534E3FaCa9F4e7F2E2cf85d5E4C8
+### wstETH above
+# Tokens: USDC, USDT, DAI, WSTETH
+L1_SEPOLIA_ADDRESSES=0x94a9D9AC8a22534E3FaCa9F4e7F2E2cf85d5E4C8,0xaA8E23Fb1079EA71e0a56F48a2aA51851D8433D0,0xFF34B3d4Aee8ddCd6F9AFFFB6Fe49bD371b8a357,0xB82381A3fBD3FaFA77B3a7bE693342618240067b
+# Incorrect except final address
+L2_SEPOLIA_ADDRESSES=0x94a9D9AC8a22534E3FaCa9F4e7F2E2cf85d5E4C8,0xaA8E23Fb1079EA71e0a56F48a2aA51851D8433D0,0xFF34B3d4Aee8ddCd6F9AFFFB6Fe49bD371b8a357,0x0733Df3e178c32f44B85B731D5475156a6E16391
+L2_SEPOLIA_RESTRICTED_ADDRESSES=0x00000000000000000000000000000000000003e8,0x00000000000000000000000000000000000003e9
+
+## USDX BRIDGE ##
+
+L1_MAINNET_USDX=0xf8750b54d86BE7aE9e32b4A0C826811198D63313
+L1_MAINNET_PORTAL=
+L1_MAINNET_CONFIG=
+L1_MAINNET_BRIDGE_TOKENS=
+L1_MAINNET_BRIDGE_CAPS=
+
+L1_SEPOLIA_USDX=0x43bd82D1e29a1bEC03AfD11D5a3252779b8c760c
+L1_SEPOLIA_PORTAL=0x6EeeA09335D09870dD467FD34ECc10Fdb5106527
+L1_SEPOLIA_CONFIG=0xdEC733B0643E7c3Bd06576A4C70Ca87E301EAe87
+# Tokens: USDC, USDT,  DAI
+# Caps  : 1e30, 1e30, 1e30
+L1_SEPOLIA_BRIDGE_TOKENS=0x94a9D9AC8a22534E3FaCa9F4e7F2E2cf85d5E4C8,0xaA8E23Fb1079EA71e0a56F48a2aA51851D8433D0,0xFF34B3d4Aee8ddCd6F9AFFFB6Fe49bD371b8a357
+L1_SEPOLIA_BRIDGE_CAPS=1000000000000000000000000000000,1000000000000000000000000000000,1000000000000000000000000000000
+
+# OZUSD #
+
+INITIAL_SHARE_AMOUNT=1000000000000000000
+
+# WOZUSD #
+
+L2_MAINNET_OZUSD=
+
+L2_SEPOLIA_OZUSD=
