--- a/foundry.toml
+++ b/foundry.toml
@@ -15,8 +15,8 @@ gas_reports = [
 ]
 
 remappings = [
-    "openzeppelin/=lib/openzeppelin-contracts",
-    "optimism/=lib/optimism/packages/contracts-bedrock",
+    'openzeppelin/=lib/openzeppelin-contracts',
+    'optimism/=lib/optimism/packages/contracts-bedrock',
     '@openzeppelin/contracts-upgradeable/=lib/optimism/packages/contracts-bedrock/lib/openzeppelin-contracts-upgradeable/contracts',
     '@openzeppelin/contracts/=lib/optimism/packages/contracts-bedrock/lib/openzeppelin-contracts/contracts',
     '@openzeppelin/contracts-v5/=lib/optimism/packages/contracts-bedrock/lib/openzeppelin-contracts-v5/contracts',
@@ -27,5 +27,8 @@ remappings = [
     'ds-test/=lib/optimism/packages/contracts-bedrock/lib/forge-std/lib/ds-test/src',
     'safe-contracts/=lib/optimism/packages/contracts-bedrock/lib/safe-contracts/contracts',
     'kontrol-cheatcodes/=lib/optimism/packages/contracts-bedrock/lib/kontrol-cheatcodes/src',
-    'gelato/=lib/optimism/packages/contracts-bedrock/lib/automate/contracts'
+    'gelato/=lib/optimism/packages/contracts-bedrock/lib/automate/contracts',
+    'src/L1/interface/=src/L1/interface',
+    'src=lib/optimism/packages/contracts-bedrock/src/',
+    '@src=src'
 ]
