--- a/foundry.toml
+++ b/foundry.toml
@@ -27,8 +27,5 @@ remappings = [
     'ds-test/=lib/optimism/packages/contracts-bedrock/lib/forge-std/lib/ds-test/src',
     'safe-contracts/=lib/optimism/packages/contracts-bedrock/lib/safe-contracts/contracts',
     'kontrol-cheatcodes/=lib/optimism/packages/contracts-bedrock/lib/kontrol-cheatcodes/src',
-    'gelato/=lib/optimism/packages/contracts-bedrock/lib/automate/contracts',
-    'src/L1/interface/=src/L1/interface',
-    'src=lib/optimism/packages/contracts-bedrock/src/',
-    '@src=src'
+    'gelato/=lib/optimism/packages/contracts-bedrock/lib/automate/contracts'
 ]
