build: before bytes

--- a/foundry.toml
+++ b/foundry.toml
@@ -1,5 +1,5 @@
 [profile.default]
-solc-version = "0.8.15"
+solc-version = "0.8.28"
 evm_version = "cancun"
 libs = ['lib']
 optimizer = true
@@ -27,5 +27,8 @@ remappings = [
     'ds-test/=lib/optimism/packages/contracts-bedrock/lib/forge-std/lib/ds-test/src',
     'safe-contracts/=lib/optimism/packages/contracts-bedrock/lib/safe-contracts/contracts',
     'kontrol-cheatcodes/=lib/optimism/packages/contracts-bedrock/lib/kontrol-cheatcodes/src',
-    'gelato/=lib/optimism/packages/contracts-bedrock/lib/automate/contracts'
+    'gelato/=lib/optimism/packages/contracts-bedrock/lib/automate/contracts',
+    '@layerzero/=lib/layerzero-v2/packages/layerzero-v2/evm',
+    '@layerzerolabs/lz-evm-protocol-v2/=lib/layerzero-v2/packages/layerzero-v2/evm/protocol',
+    '@layerzerolabs/lz-evm-messagelib-v2/=lib/layerzero-v2/packages/layerzero-v2/evm/messagelib'
 ]
