--- a/foundry.toml
+++ b/foundry.toml
@@ -28,6 +28,7 @@ remappings = [
     'safe-contracts/=lib/optimism/packages/contracts-bedrock/lib/safe-contracts/contracts',
     'kontrol-cheatcodes/=lib/optimism/packages/contracts-bedrock/lib/kontrol-cheatcodes/src',
     'gelato/=lib/optimism/packages/contracts-bedrock/lib/automate/contracts',
+    'solidity-bytes-utils/=lib/solidity-bytes-utils',
     '@layerzero/=lib/layerzero-v2/packages/layerzero-v2/evm',
     '@layerzerolabs/lz-evm-protocol-v2/=lib/layerzero-v2/packages/layerzero-v2/evm/protocol',
     '@layerzerolabs/lz-evm-messagelib-v2/=lib/layerzero-v2/packages/layerzero-v2/evm/messagelib'
