--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,8 +30,15 @@ jobs:
 
       - name: Run Forge tests
         env:
-          L1_RPC_URL: ${{ secrets.L1_RPC_URL }}
-          L2_RPC_URL: ${{ secrets.L2_RPC_URL }}
+          L1_MAINNET_RPC_URL: ${{ secrets.L1_MAINNET_RPC_URL }}
+          L1_TESTNET_RPC_URL: ${{ secrets.L1_TESTNET_RPC_URL }}
+          L2_TESTNET_RPC_URL: ${{ secrets.L2_TESTNET_RPC_URL }}
+          L2_MAINNET_USDX: ${{ secrets.L2_SEPOLIA_USDX }}
+          L2_SEPOLIA_USDX: ${{ secrets.L2_SEPOLIA_USDX }}
+          ADMIN: ${{ secrets.ADMIN }}
+          EID: ${{ secrets.EID }}
+          INITIAL_SHARE_AMOUNT: ${{ secrets.INITIAL_SHARE_AMOUNT }}
+
         run: |
           forge test --match-contract OzUSDForkTest
           forge test --match-contract WozUSDForkTest
