--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "lib/solidity-bytes-utils"]
 	path = lib/solidity-bytes-utils
 	url = https://github.com/GNSPS/solidity-bytes-utils
+[submodule "lib/hex-stablecoin-usd"]
+	path = lib/hex-stablecoin-usd
+	url = https://github.com/Ozean-L2/hex-stablecoin-usd
