feat: usdxBridgeAlt deploy

--- a/.envSample
+++ b/.envSample
@@ -54,6 +54,9 @@ L2_SEPOLIA_RESTRICTED_ADDRESSES=0x00000000000000000000000000000000000003e8,0x000
 
 ## USDX BRIDGE ##
 
+# Flare id for testing #
+EID=30295
+
 L1_MAINNET_USDX=0xf8750b54d86BE7aE9e32b4A0C826811198D63313
 L1_MAINNET_PORTAL=
 L1_MAINNET_CONFIG=
